Added icons and updated card design in details page

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
   <title>React App</title>
   <script
-    src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=yaml&amp;skin=desert">
+    src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=yaml&amp;skin=default">
   </script>
 
 </head>
